
2010-June-13 Struan Robertson

	* MesmerTools.cpp: Rolling some changes back to 286 for grain averaging 
      method to catch possible divide by zero error.
      * Methyl_H_to_Methane.xml: Updated to include reference reaction.

2010-June-13 Struan Robertson

	* System.cpp/.h: Chi-squared method altered to account for excess 
      concentration in the case of a bimolecular association reaction.

2010-June-06 Struan Robertson

	* HinderRotorA.cpp/.h: Addition of QM hindered rotor torsion potential.

2010-June-03 Struan Robertson

	* HinderRotorA.cpp: Addition of QM Hamiltonian matrix in preparation for
	adding torsion potential.

2010-May-23 Struan Robertson

	* HinderRotorA.h/.cpp: Initial implementation of hindered rotor. QM one-
        dimensional free rotor density of states convolved with the other density
        of states.

2010-May-22 Struan Robertson

	* QMRotor.cpp: Minor correction to improve agreement with classical results.
      * Update of Ethyl + H example with experimental numbers.

2010-May-21 Chi-Hsiu Liang

  * Update some changes to QM Hindered Rotor approximation.
  * Need a real system to test against the code.

2010-May-14 Chi-Hsiu Liang

  * Addition of MacOSX mesmer.test files in MesmerQA test projects.
  * Some progress on the QM Hindered Rotor approach.

2010-May-12 Chi-Hsiu Liang

  * modified the output path of mesmer_out.xml to make it clear.

2010-May-10 Dave Glowacki

      * changes to MakeFile and Hindered Rotor *.h files to get LINUX compilation working

2010-May-10 Dave Glowacki

      * System.cpp, make some changes to get correct behavior when RateCoefficientsOnly is specified
      * IrreversibleExchangeReaction.cpp & IrreversibleUnimolecularReaction.cpp: make changes for 
        correct behavior in the case of a negative barrier
      * MesmerTools.cpp, make changes to avoid numerical errors for QMrotor routines
      * LandauZenerCrossingCoeff.cpp, WKBCrossingCoeff.cpp, SimpleRRKM.cpp: changes to give correction