@@ -265,7 +265,7 @@
   </me:conditions>
 
   <me:modelParameters>
-    <me:grainSize units="cm-1">100</me:grainSize>
+    <me:grainSize units="cm-1">200</me:grainSize>
     <!--<me:numberOfGrains> 500 </me:numberOfGrains>-->
     <!--<me:maxTemperature>3000</me:maxTemperature>-->
     <me:energyAboveTheTopHill>10.</me:energyAboveTheTopHill>
